tried some space saving

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,2 +1,3 @@
-# Start from the universal image
-FROM mcr.microsoft.com/devcontainers/universal:2
+# Use a lightweight Java-specific base image instead of universal
+# This significantly reduces disk space usage
+FROM mcr.microsoft.com/devcontainers/java:1-11-bookworm
